--- a/index.html
+++ b/index.html
@@ -774,11 +774,11 @@
                                                                         <div class="testi-item fl-wrap">
                                                                             <span class="testi-number color-bg">.03</span>
                                                                             <div class="testimonilas-text   fl-wrap">
-                                                                                <p>"I enthusiastically recommend Fady for his IT services, which he used to develop the technical aspect of our October STEM Model African Union. He was professional and punctual, consistently exceeding our expectations. I am thrilled with the results and would not hesitate to use his services again!"</p>
+                                                                                <p>"I enthusiastically recommend Seif for his IT services, which he used to develop the technical aspect of our October STEM Model African Union. He was professional and punctual, consistently exceeding our expectations. I am thrilled with the results and would not hesitate to use his services again!"</p>
                                                                             </div>
                                                                             <div class="testi-footer fl-wrap">
                                                                                 <div class="testi-avatar"><img src="images/Y.Mostaf.jpg" alt></div>
-                                                                                <h3>Yousef Mostaf</h3>
+                                                                                <h3>Yousef Mostafa</h3>
                                                                                 <p class="testi-link" target="_blank">2023</p>
                                                                             </div>
                                                                         </div>
