--- a/index.html
+++ b/index.html
@@ -815,9 +815,15 @@
                                         <div class="resumeEvenColumn">
 
                                             <div class="resumeContents">
+						<div class="box">
+                                                    <h4>2024 - now</h4>
+                                                    <h3>Colorado College</h3>
+                                                    <h6>GPA: Still Processing </h6>
+                                                    <p>I am currently studying Computer Science B.S. at Colorado College</p>
+                                                </div>
 
                                                 <div class="box">
-                                                    <h4>2020 - Now</h4>
+                                                    <h4>2020 - 2024</h4>
                                                     <h3>STEM High School For Boys - 6th of October</h3>
                                                     <h6>GPA: 3.5</h6>
                                                     <p>I am currently studying at STEM High School. Here, I've developed a strong foundation in Science, Technology, Engineering, and Mathematics, which has sparked my passion for innovative thinking and analytical problem-solving.</p>
