--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <div class="swiper-container  ">
                                 <div class="swiper-wrapper">
                                     <!-- swiper-slide-->
-                                    <div class="swiper-slide" data-fsslideropt1="Category : <span>Web Design</span>" data-fsslideropt2="Client : <span>STEM Egypt</span>" data-fsslideropt3="Date : <span>July 2024</span>">
+                                    <div class="swiper-slide" data-fsslideropt1="Category : <span>Web Design</span>" data-fsslideropt2="Client : <span>STEM Egypt</span>" data-fsslideropt3="Date : <span>July, 2024</span>">
                                         <div class="fs-slider-item fl-wrap">
                                             <div class="bg" data-bg="images/bg_12.png" data-swiper-parallax="20%"></div>
                                             <div class="overlay"></div>
