--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <div class="about_row">
                                     <div class="block_text">
                                         <h2>Seif Abdelhamid</h2>
-                                        <p>Hey there! I'm Seif Abdelhamid, a passionate and versatile student at STEM High School for Boys at 6th October city, with a love for technology and creative problem-solving. As a web developer and designer, I thrive on crafting engaging digital experiences that leave a lasting impact. With a keen eye for detail and a drive for excellence, I constantly seek innovative ways to push the boundaries of design and user experience.</p>
+                                        <p>Hey there! I'm Seif Abdelhamid, a passionate and versatile Computer Science Undergraduate student, with a love for technology and creative problem-solving. As a web developer and designer, I thrive on crafting engaging digital experiences that leave a lasting impact. With a keen eye for detail and a drive for excellence, I constantly seek innovative ways to push the boundaries of design and user experience.</p>
                                         <p>My journey in this ever-evolving field has exposed me to various projects, honing my skills in front-end development, UI/UX design, and responsive layouts. Being part of the diverse and intellectually stimulating environment at STEM High School for Boys at 6th of October has further fueled my curiosity and dedication to continuous learning.</p>
                                         <p>When not coding or designing, you can find me watching movies, immersing myself in captivating books, or participating in hackathons to collaborate with fellow tech enthusiasts. I'm excited to embark on new challenges and contribute my creative flair to meaningful projects.</p>
                                         <a href="https://psycho-seif.github.io/Resume/" class="btn   fl-btn color-bg"><span>My Resume</span></a>							
@@ -720,7 +720,7 @@
                                         <div class="cen-slider-pagination_wrap">
                                             <div class="cen-slider-pagination"></div>
                                         </div>
-                                        <a href="https://github.com/Psycho-seif?tab=repositoriess" class="fpc_btn"><span>View All Projects</span> <i class="fal fa-angle-right"></i></a>
+                                        <a href="https://github.com/Seif-Abdelhamid?tab=repositories" class="fpc_btn"><span>View All Projects</span> <i class="fal fa-angle-right"></i></a>
                                     </div>
                                 </div>
                             </div>
