--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="https://www.facebook.com/seif.wael.184" target="_blank">Fb</a> 
                     <a href="https://www.instagram.com/psycho_seif" target="_blank">In</a> 
                     <a href="https://www.behance.net/seifwaelab" target="_blank">Be</a>
-                    <a href="https://github.com/Psycho-seif" target="_blank">Github</a>
+                    <a href="https://github.com/Seif-Abdelhamid" target="_blank">Github</a>
                 </div>
                 <!--  hero-wrap-social end  -->	
 			
